# Visionatrix

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CommandLineOptions.html  Installation.html  Makefile  README.md  alembic.ini  docker-compose.yml  genindex.html  index.html  objects.inv  openapi.json  pyproject.toml  search.html  searchindex.js
.github/: CONTRIBUTING.md  SECURITY.md  renovate.json
.github/workflows/: analysis-coverage.yml  docker-mirror.yml  docs-check.yml  docs.yml  embedded-windows.yml  lint.yml  openapi-check.yml  release-tags.yml  test-install.yml  tests-flows-install.yml  tests-flows-run.yml
.run/: comfy_ui.run.xml  dev-run-comfy.run.xml  module-install-flow.run.xml  module-install.run.xml  module-orphan-modules.run.xml  module-run (server).run.xml  module-run (worker, IP).run.xml  module-run-dev.run.xml  module-run.run.xml  module-update.run.xml
Flows/: ComicuPortrait.html  GhibliPortrait.html  Juggernaut_Lighting_LoRAs.html  PhotoStickers.html  Photomaker_1.html  Playground_2_5_aesthetic.html  SDXL_Lighting_8.html  Stable_Cascade.html  index.html
_sources/: index.rst.txt
_sources/Flows/: Juggernaut_Lighting_LoRAs.rst.txt  PhotoStickers.rst.txt  Stable_Cascade.rst.txt  index.rst.txt
ai_media_wizard/: __init__.py  __main__.py  flows.py  models.py  options.py  tasks.py  tasks_engine.py  wizard_backend.py
ai_media_wizard/init/: __init__.py  custom_nodes.py  flows.py  install.py  update.py
ai_media_wizard/install_update/: __init__.py  custom_nodes.py  install.py  update.py
client/: 200.html  404.html  index.html
client/_nuxt/: 06jwmKcy.js  B06fR12w.js  B6m7FW5p.js  BAeezU9Y.js  BF2-qdkD.js  BHlKiR4d.js  BM40k7-v.js  BaH2d1a2.js  BgUPvNoR.js  Bm3lMo2I.js  BqTSbwlG.js  Bu4XD4b_.js  C7Z8ZwgF.js  C8ybMsBo.js  C9CrBJ69.js  CJdaHMLG.js  CVGNpuGE.js  CVLizI2_.js  Card.29-sgHm6.js  Card.60UEvyOe.js  Card.BBMhxTIK.js  Card.CS6yy8sx.js  Card.CwdqctQo.js  Card.CytIC4le.js  Card.glxpzH7e.js  CmxuUfYF.js  D5wKXJG7.js  D6B4ECTF.js  DBXeC6UA.js  DGR98Oew.js  DJzMhJWb.js  DLhEFJ3D.js  DbRu337h.js  DxEyoURu.js  IconCSS.4sJ2XSL1.js  IconCSS.4udiq4tl.js  IconCSS.B0ortmX0.js  IconCSS.BAmq1T3l.js  IconCSS.BJDPmObc.js  IconCSS.BMZ_-KTl.js  (+268 more)
docker/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.py  entrypoint.sh  example.env  healthcheck.sh
docs/: CommandLineOptions.rst  Installation.rst  ScalingInformation.rst  TechnicalInformation.rst  VixWorkflows.rst  WorkingModes.rst  conf.py  index.rst
docs/Flows/: ComicuPortrait.rst  GhibliPortrait.rst  Juggernaut_Lighting_LoRAs.rst  Juggernaut_Lite.rst  Juggernaut_XL.rst  MemojiPortrait.rst  PhotoStickers.rst  Photomaker_1.rst  Playground_2_5_aesthetic.rst  SDXL_Lighting.rst  SDXL_Lighting_8.rst  Stable_Cascade.rst  SupirUpscaler.rst  VintagePortrait.rst  index.rst
flows/: models_catalog.json
flows/Juggernaut_Lighting_LoRAs/: flow.json  flow_comfy.json
flows/Photomaker_1/: flow.json  flow_comfy.json  photomaker_plus_1_comfy.json
flows/Playground_2_5_aesthetic/: flow.json  flow_comfy.json  playground_2_5_aesthetic.json
flows/SDXL_Lighting_8/: flow.json  flow_comfy.json  sdxl_lighting_8.json  sdxl_lighting_8_comfy.json
flows/cinematic_portrait/: flow.json  flow_comfy.json
flows/comicu_portrait/: flow.json  flow_comfy.json
flows/ghibli_portrait/: flow.json  flow_comfy.json
flows/juggernaut_lighting_loras/: flow.json
flows/juggernaut_lite/: flow.json  flow_comfy.json
flows/juggernaut_xl/: flow.json  flow_comfy.json
flows/memoji_portrait/: flow.json  flow_comfy.json
flows/photo_stickers/: flow.json  flow_comfy.json
flows/photomaker_1/: flow.json  flow_comfy.json
flows/playground_2_5_aesthetic/: flow.json  flow_comfy.json
flows/sdxl_lighting/: flow.json  flow_comfy.json
flows/sdxl_lighting_8/: flow.json  flow_comfy.json
flows/stable_cascade/: flow.json  flow_comfy.json
flows/supir_upscaler/: flow.json  flow_comfy.json
flows/vintage_portrait/: flow.json  flow_comfy.json
scripts/: create_user.py  easy_install.py  flows_install.py  generate_openapi.py
scripts/ci/: openapi_compare.py  openapi_generate.py  release_tag_repos.py
scripts/python_embeded/: run_cpu.bat  run_nvidia_gpu.bat
tests/: create_flow_tasks.py  helpers.py  rm_background.py  rm_background_birefnet1.py  rm_background_bria.py
visionatrix/: __init__.py  __main__.py  _tasks_enigne_helpers.py  _version.py  backend.py  backend_misc.py  basic_node_list.py  comfyui.py  comfyui_class_info.py  comfyui_proxy_middleware.py  comfyui_wrapper.py  custom_openapi.py  database.py  db_queries.py  db_queries_async.py  etc.py  events.py  federation.py  flows.py  flows_loras.py  llm_utils.py  models.py  models_map.py  nodes.py  nodes_helpers.py  options.py  orphan_models.py  prompt_translation.py  pydantic_models.py  settings_comfyui.py  surprise_me.py  tasks.py  tasks_engine.py  tasks_engine_async.py  tasks_engine_etc.py  webhooks.py
visionatrix/alembic/: env.py
visionatrix/background_tasks/: __init__.py  background_tasks.py  federation.py  post_update.py
visionatrix/client/: 200.html  404.html  index.html
visionatrix/install_update/: __init__.py  custom_nodes.py  flow_install_callback.py  install.py  install_update.py  update.py
visionatrix/routes/: __init__.py  federation.py  flows.py  helpers.py  models.py  other.py  settings.py  settings_comfyui.py  tasks.py  tasks_internal.py  workers.py
visionatrix/user_backends/: __init__.py  ldap.py  nextcloud.py  vix_db.py
web/: .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  Makefile  README.md  app.config.ts  app.vue  declarations.d.ts  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.js
web/components/: AppContainer.vue  Footer.vue  Hero.vue  Navbar.vue  ScrollToTop.vue  SystemStats.vue
web/composables/: useApiFetch.ts
web/middleware/: route-sync.global.ts
web/pages/: index.vue
web/plugins/: apiFetch.ts  imgComparisonSlider.ts  vueKonva.ts
web/stores/: civitai.ts  federated.ts  flows.ts  nextcloud.ts  settings.ts  system.ts  (+2 more)
(+3652 files in other folders)
