[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.18",
]

[project]
name = "visionatrix"
description = "Image and video creation and processing using ComfyUI"
readme = "README.md"
keywords = [
  "API",
  "ComfyUI",
  "Image",
  "Video",
]
license = "AGPL-3.0-or-later"
authors = [
  { name = "Alexander Piskun", email = "bigcat88@icloud.com" },
  { name = "Andrey Borysenko", email = "andrey18106x@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  "version",
]
dependencies = [
  "alembic",
  "bcrypt==4.0.1",
  "fastapi>=0.109.2",
  "httpx>=0.25.2",
  "packaging",
  "passlib[bcrypt]",
  "psutil",
  "pydantic>=2.1.1",
  "python-dotenv>=1",
  "python-multipart",
  "pyyaml",
  "sqlalchemy>=2.0.29",
  "torch",
  "torchvision",
  "uvicorn[standard]>=0.23.2",
]
optional-dependencies.dev = [
  "pre-commit",
  "pylint",
  "pytest",
]
optional-dependencies.docs = [
  "autodoc-pydantic>=2.0.1",
  "sphinx>=6.2",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-issues>=3.0.1",
  "sphinx-rtd-theme>=1",
]
urls.Changelog = "https://github.com/Visionatrix/Visionatrix/blob/main/CHANGELOG.md"
urls.Documentation = "https://visionatrix.github.io/VixFlowsDocs/"
urls.Source = "https://github.com/Visionatrix/Visionatrix"

[tool.hatch.version]
path = "visionatrix/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/visionatrix",
  "/CHANGELOG.md",
  "/README.md",
]
exclude = [
]

[tool.black]
line-length = 120
preview = true

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "G",
  "I",
  "PIE",
  "Q",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W",
]
lint.extend-ignore = [
  "I001",
  "RUF100",
  "S311",
  "S603",
]

lint.per-file-ignores."scripts/easy_install.py" = [
  "S602",
  "S607",
]
lint.per-file-ignores."visionatrix/__init__.py" = [
  "F401",
]
lint.per-file-ignores."visionatrix/backend.py" = [
  "C901",
]
lint.per-file-ignores."visionatrix/install_update/*.py" = [
  "S607",
]
lint.per-file-ignores."visionatrix/install_update/__init__.py" = [
  "F401",
]
lint.extend-per-file-ignores."tests/**/*.py" = [
  "E402",
  "S",
  "UP",
]
lint.mccabe.max-complexity = 25

[tool.isort]
profile = "black"

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
design.max-attributes = 10
design.max-locals = 28
design.max-branches = 24
design.max-returns = 8
design.max-args = 8
design.max-statements = 90
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
similarities.min-similarity-lines = 12
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "invalid-name",
  "too-many-nested-blocks",
  "global-statement",
  "broad-exception-caught",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]
log_cli = true
addopts = "-rs --color=yes"
asyncio_mode = "auto"
